--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/mugiwara999/Subscription-microservice#readme",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
     "prisma": "^6.8.2"
   }
 }
