--- a/package.json
+++ b/package.json
@@ -20,6 +20,15 @@
   "homepage": "https://github.com/mugiwara999/Subscription-microservice#readme",
   "dependencies": {
     "@prisma/client": "^6.8.2",
-    "prisma": "^6.8.2"
+    "@types/bcrypt": "^5.0.2",
+    "@types/dotenv": "^6.1.1",
+    "@types/express": "^5.0.2",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "prisma": "^6.8.2",
+    "zod": "^3.25.32"
   }
 }
